Review and test cleanup and inner class super